# b2bvUoP_kalkulator

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AUDYT.md  AUDYT_LOGIKA_BIZNESOWA_2026-05-23.md  AUDYT_UZUPELNIENIE.md  CLAUDE.md  README.md  ai-instruction.md  analiza.md  constitution.md  dane_wejsciowe_kalkulator.json  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  run_app.sh  sdd_summary.md  stop_app.sh
.ai/: GEMINI.md  context.md  instructions.md  session-state.md  tasks.md
.github/workflows/: ci.yml
backend/: analysis.py  app.py  calculations.py  config.py  validation.py
backend/domain/: rounding.py
backend/domain/b2b/: __init__.py  aggregate.py  benefits.py  health_contribution.py  income_tax.py  lost_revenue.py  social_contributions.py
backend/services/: calculation_service.py
data/: dane_wejsciowe_kalkulator.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/dashboard/: index.html  tailwind.config.js.html
frontend/src/: App.jsx  App.test.jsx  i18n-parity.test.js  i18n.js  index.css  main.jsx
frontend/src/components/: Alert.jsx  Alert.test.jsx  BreakEvenChart.jsx  BreakEvenChart.test.jsx  CalculatorForm.jsx  CalculatorForm.test.jsx  Checkbox.jsx  (+17 more)
plans/: MASTER.md  README.md
plans/00-spec/: 0001-zakres.md  0002-przypadki-uzycia.md
plans/01-arch/: 0001-architektura-docelowa.md  0002-budzet-cech.md
plans/02-tasks/: README.md  T00-konstytucja.md
plans/03-backlog/: maly-zus-plus.md
scripts/: backend_cov.sh  calculate_function_coverage.py  frontend_cov.sh  generate_coverage_summary.sh
src/: analysis.py  app.py  calculations.py  config.py  pension_calculator.py  validation.py
src/dashboard/: package-lock.json  package.json  setupTests.js  tailwind.config.js  vite.config.js
src/pdf_generator/: generator.py
src/services/: calculation_service.py
src/templates/: index.html
tests/: conftest.py
tests/e2e/: accessibility.spec.js  calculator.spec.js  calculator_e2e.spec.js  main.spec.js  smoke.spec.js  visual.spec.js
tests/integration/: test_api.py  test_real_scenarios.py  test_scenarios.py  test_security.py
tests/unit/: test_analysis.py  test_analysis_endpoints.py  test_app.py  test_app_endpoints.py  test_app_utils.py  test_b2b_domain_helpers.py  test_calculation_details.py  test_calculation_service.py  test_calculations.py  test_config.py  test_core_logic.py  test_edge_cases.py  test_pdf_generator.py  test_pension_calculator.py  test_rounding.py  test_validation.py
(+148 files in other folders)
