[project]
name = "b2b-vs-uop-calculator"
version = "0.1.0"
description = "Professional B2B vs UoP contract comparison tool for IT industry"
authors = [
    { name = "Artur", email = "artur@example.com" }
]
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-Cors>=4.0,<5.0",
    "openpyxl>=3.1,<4.0",
    "pydantic>=2.5,<3.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-flask",
    "playwright",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-Flask-Cors",
    "types-openpyxl",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
strict = true
files = ["backend/"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]
